--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                                                             Inside Tips and Shortcuts Form The Pros
                                                     </h2>
                                                     <div>
-                                <a class="btn btn-white rounded mb-10 mb-xxl-5" href="https://s3.amazonaws.com/licensed-plumber/blog/index.html" target="_top">Read More</a>
+                                <a class="btn btn-white rounded mb-10 mb-xxl-5" href="https://vyking99.github.io/plumbing/blog/index.html" target="_top">Read More</a>
                             </div>
                                             </div>
                     <!-- /column -->
