--- a/what-are-the-most-common-plumbers-tips-for-troubleshooting-plumbing-problems.html
+++ b/what-are-the-most-common-plumbers-tips-for-troubleshooting-plumbing-problems.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="alternate" type="application/rss+xml" title="Plumbing Installation World" href="blog/rss.xml" />
-    <link rel="alternate" type="application/rss+xml" title="Plumbing Installation World" href="sitemap.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Plumbing Installers Current Discovery" href="blog/rss.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Plumbing Installers Current Discovery" href="sitemap.xml" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="What are the most common plumbers&#039; tips for troubleshooting plumbing problems? - Plumbing Installation World">
+    <meta name="title" content="What are the most common plumbers&#039; tips for troubleshooting plumbing problems? - Plumbing Installers Current Discovery">
     <meta name="description" content="Plumbing problems occur in every building at some point. This inevitability means you either need to understand plumbing good enough to handle things on your own when problems arise, or know who to call to get it fixed.">
     <meta name="keywords" content="plumbing installation">
     
-    <title>What are the most common plumbers&#039; tips for troubleshooting plumbing problems? - Plumbing Installation World</title>
-    <link rel="shortcut icon" href="Plumbing-Installation-World.png">
+    <title>What are the most common plumbers&#039; tips for troubleshooting plumbing problems? - Plumbing Installers Current Discovery</title>
+    <link rel="shortcut icon" href="Plumbing-Installers-Current-Discovery.png">
     <link rel="stylesheet" href="https://855ae9b9.resourcestemplate.pages.dev/plugins.css">
     <link rel="stylesheet" href="https://855ae9b9.resourcestemplate.pages.dev/style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"
@@ -45,13 +45,13 @@
         footer .widget-title { color: #cacaca!important };
     </style>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-248487474-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-248796220-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-248487474-1');
+  gtag('config', 'UA-248796220-1');
 </script>
 </head>
 
@@ -63,8 +63,8 @@
                     <div class="d-flex flex-row w-100 justify-content-between align-items-center d-lg-none">
                         <div class="navbar-brand">
                             <a href="index.html">
-                                <img class="logo-dark" src="Plumbing-Installation-World.png" srcset="Plumbing-Installation-World.png 2x"  alt="Plumbing Installation World" style="width: 252px; height:67px"/>
-                                <img class="logo-light" src="Plumbing-Installation-World.png" srcset="Plumbing-Installation-World.png 2x"  alt="Plumbing Installation World" style="width: 252px; height:67px"/>
+                                <img class="logo-dark" src="Plumbing-Installers-Current-Discovery.png" srcset="Plumbing-Installers-Current-Discovery.png 2x"  alt="Plumbing Installers Current Discovery" style="width: 252px; height:67px"/>
+                                <img class="logo-light" src="Plumbing-Installers-Current-Discovery.png" srcset="Plumbing-Installers-Current-Discovery.png 2x"  alt="Plumbing Installers Current Discovery" style="width: 252px; height:67px"/>
                             </a>
                         </div>
                         <div class="navbar-other ms-auto">
@@ -82,7 +82,7 @@
                         <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
                             <div class="offcanvas-header mx-lg-auto order-0 order-lg-1 d-lg-flex px-lg-15 pb-2 pt-2">
                                 <a href="index.html" class="transition-none d-none d-lg-flex">
-                                    <img src="Plumbing-Installation-World.png" srcset="Plumbing-Installation-World.png 2x"  alt="" style="width: 252px; height:67px" />
+                                    <img src="Plumbing-Installers-Current-Discovery.png" srcset="Plumbing-Installers-Current-Discovery.png 2x"  alt="" style="width: 252px; height:67px" />
                                 </a>
                                 <h3 class="text-white fs-30 mb-0 d-lg-none">What are the most common plumbers&#039; tips for troubleshooting plumbing problems?</h3>
                                 <button type="button" class="btn-close btn-close-white d-lg-none" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -738,7 +738,7 @@
                 </div>
                 <!-- /column -->
                                     <div class="col-md-12 text-center footer-msg">
-                        <img alt="qr code" src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https%3A%2F%2Fs3.amazonaws.com%2Flicensed-plumber%2Findex.html&amp;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L" />
+                        <img alt="qr code" src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https%3A%2F%2Fvyking99.github.io%2Fplumbing%2Findex.html&amp;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L" />
                     </div>
                             </div>
             <!--/.row -->
