--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="alternate" type="application/rss+xml" title="Plumbing Installation World" href="blog/rss.xml" />
-    <link rel="alternate" type="application/rss+xml" title="Plumbing Installation World" href="sitemap.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Plumbing Installers Current Discovery" href="blog/rss.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Plumbing Installers Current Discovery" href="sitemap.xml" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Privacy Policy - Plumbing Installation World">
+    <meta name="title" content="Privacy Policy - Plumbing Installers Current Discovery">
     <meta name="description" content="Plumbing problems occur in every building at some point. This inevitability means you either need to understand plumbing good enough to handle things on your own when problems arise, or know who to call to get it fixed.">
     <meta name="keywords" content="plumbing installation">
     
-    <title>Privacy Policy - Plumbing Installation World</title>
-    <link rel="shortcut icon" href="Plumbing-Installation-World.png">
+    <title>Privacy Policy - Plumbing Installers Current Discovery</title>
+    <link rel="shortcut icon" href="Plumbing-Installers-Current-Discovery.png">
     <link rel="stylesheet" href="https://855ae9b9.resourcestemplate.pages.dev/plugins.css">
     <link rel="stylesheet" href="https://855ae9b9.resourcestemplate.pages.dev/style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"
@@ -69,10 +69,10 @@
                                                 Privacy Policy
                                             </h2>
                                             <p>
-                                                Last updated: <b>03-11-2022</b>
+                                                Last updated: <b>07-11-2022</b>
                                             </p>
                                             <p>
-                                                My Company <b>Plumbing Installation World</b> ("us", "we", or "our") operates / (the "Site"). This page informs you of our policies regarding the collection, use and disclosure
+                                                My Company <b>Plumbing Installers Current Discovery</b> ("us", "we", or "our") operates / (the "Site"). This page informs you of our policies regarding the collection, use and disclosure
                                                 of Personal Information we receive from users of the Site
                                             </p>
                                             <p>
@@ -257,7 +257,7 @@
                 </div>
                 <!-- /column -->
                                     <div class="col-md-12 text-center footer-msg">
-                        <img alt="qr code" src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https%3A%2F%2Fs3.amazonaws.com%2Flicensed-plumber%2Findex.html&amp;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L" />
+                        <img alt="qr code" src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https%3A%2F%2Fvyking99.github.io%2Fplumbing%2Findex.html&amp;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L" />
                     </div>
                             </div>
             <!--/.row -->
