--- a/index.html
+++ b/index.html
@@ -590,9 +590,9 @@
                     <div class="col-md-10 mx-auto footer-msg">
                         
                         
-                        <h1>A Few Tips On How to Handle A Plumbing Emergency</h1>
+                        <h1>A Few Tips On How to Handle A Plumbing Emergency</h1> 
 
-<p>There are two things that come to mind when plumbing becomes a problem. You might do it on your own, or should you get help?</p>
+<p>There are two things that come to mind when a <a href="https://s3.us-west-004.backblazeb2.com/plumbingnews/index.html">plumbing problem</A> messes with your day. Should you fix it on your own, or get help?</p>
 
 <p>If the issue includes natural gas, then it is safer to get a heating professional for assistance. If an inspector examines the job, it is more likely to pass if it’s serviced by a licensed professional. And if you decide to do it by yourself, will you be confident your own work will pass if checked out by an inspector? If you are not comfortable doing the work, then you are better off hiring a plumbing contractor.</p>
 
