--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <style>
         .vertical-menu{ max-height: 400px; max-width: 520px; overflow: auto; }
-        * { scrollbar-width: thin; scrollbar-color: #3f78e0; }
+        * { scrollbar-width: thin; scrollbar-color: #00ccff; }
         /* Works on Chrome, Edge, and Safari */
         *::-webkit-scrollbar { width: 10px; }
         *::-webkit-scrollbar-thumb { background-color: #3f78e0; border-radius: 10px; border: 2px solid rgba(250, 249, 247, 0.486); }
