--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         * { scrollbar-width: thin; scrollbar-color: #00ccff; }
         /* Works on Chrome, Edge, and Safari */
         *::-webkit-scrollbar { width: 10px; }
-        *::-webkit-scrollbar-thumb { background-color: #3f78e0; border-radius: 10px; border: 2px solid rgba(250, 249, 247, 0.486); }
+        *::-webkit-scrollbar-thumb { background-color: #00ccff; border-radius: 10px; border: 2px solid rgba(250, 249, 247, 0.486); }
         h1.display-1 {font-size: 2rem; text-transform:uppercase;}
         h2 {text-transform:uppercase;}
         a.nav-link, a.dropdown-item{overflow: hidden; color:#4d6174 }
