--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-xl-7 col-xxl-6 mx-auto" data-cues="slideInDown" data-group="page-title">
                         <h1 class="display-h1 text-white fs-60 mb-4 px-md-15 px-lg-0">
-                                                            <a href="https://localplumbers.blob.core.windows.net/vancouver/index.html"  data-org="https://localplumbers.blob.core.windows.net/vancouver/index.html">Plumbing Installers Current Discovery</a>
+                                                            Plumbing Installers Current Discovery
                                                     </h1>
                         <h2 class="lead fs-24 text-white lh-sm mb-7 mx-md-13 mx-lg-10">
                                                             Insider Tips for Efficient Work
